--- a/packages/next-helpdesk/package.json
+++ b/packages/next-helpdesk/package.json
@@ -46,7 +46,9 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^5.15.0",
     "@mui/system": "^5.15.0",
+    "@types/lodash": "^4.17.20",
     "@types/react-transition-group": "^4.4.12",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "nodemon": "^3.1.10",
     "react-hook-form": "^7.48.0",
